# zCore

./: .gitignore  Cargo.toml  README.md  client.py  flake.nix  server.py
drivers/src/bus/: pci.rs
kernel-hal/src/: hal_fn.rs
kernel-hal/src/bare/: boot.rs
kernel-hal/src/bare/arch/riscv/: drivers.rs  mod.rs
linux-object/: Cargo.toml
linux-object/src/: process.rs
linux-object/src/fs/: mod.rs  shadow.rs
linux-object/src/fs/devfs/: mod.rs  shadow.rs
linux-object/src/net/: distributed.rs  mod.rs  tcp.rs
slides/final/: .gitignore  README-distributed.md  final.tex
slides/midterm/: midterm.tex
xtask/src/: build.rs  main.rs
zCore/: Cargo.toml
zCore/src/: main.rs  utils.rs
zCore/src/platform/riscv/: .gitignore
