[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
    "xtask",
]
default-members = ["xtask"]
exclude = ["zircon-user", "rboot"]

[profile.release]
lto = true
debug = true

[patch."git+https://github.com/NickCao/rcore-fs"]
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
